--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,4 +2,4 @@ zezhen:
   name: Zezhen Wu
   title: Academic Researcher & Developer
   url: https://github.com/littlehifive
-  image_url: /img/avatar.jpg
+  image_url: /img/zezhen-profile.jpg
