Update inital blog content

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 zezhen:
   name: Zezhen Wu
-  title: Academic Researcher & Developer
+  title: Behavioral Scientist
   url: https://github.com/littlehifive
   image_url: /img/zezhen-profile.jpg
